# featxsuite

./: .gitignore  README.md
demo/: demo_command_sequence.txt
featx_interfaces/: CMakeLists.txt  package.xml
featx_interfaces/srv/: LoadFeature.srv  UnloadFeature.srv
featxbinder/: CMakeLists.txt  package.xml
featxbinder/config/: featx_params.yaml
featxbinder/include/featxbinder/: static_features.h
featxbinder/launch/: early.launch.py  generated_early.launch.py
featxbinder/scripts/: early_loader.py  start_early.sh
featxbinder/src/: featx_binder.cpp  featx_generator.cpp
featxcli/: package.xml  setup.cfg  setup.py
featxcli/featxcli/: configurator.py  executor_list.py  plugin_registry.py
featxcli/featxcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
featxcli/featxcli/api/: rpc.py  test_rpc.py
featxcli/featxcli/command/: __init__.py  featx.py
featxcli/featxcli/config/: bcache.yaml
featxcli/featxcli/model/: configs.json  features.json
featxcli/featxcli/model/old/: configs.json
featxcli/featxcli/verb/: __init__.py  load.py  start_config.py  unload.py
featxcli/test/: test_configurator.py
